tests/fixtures/invalid/pow_bytes_int.py
# Cannot call pow() with Bytes, Int
x = pow(b"hello", 1)
